--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,11 +11,12 @@
 <body>
     <div class="container">
         <div class="header">Kaç Alırsan Geçersin?</div>
-        <div class="requiredNote">60</div>
+        
+        <div id="requiredNote">You need to take 60 to pass</div>
         <div class="boxes">
-            <input class="visaNote">
-            <input class="passNote" value="60">
-            <button class="calculate">Hesapla</button>
+            <input id="visaNote">
+            <input id="passNote" value="60">
+            <button id="calculate">Hesapla</button>
         </div>
         <div class="footer">Made by Neco BaBa</div>
     </div>
